--- a/index.html
+++ b/index.html
@@ -195,15 +195,14 @@
             <svg class="hud-icon" viewBox="0 0 24 24">
                 <path d="M18,9V4h-2v5h-2V2h-2v7h-2V5H8v4H6v6.5c0,4.69,3.81,8.5,8.5,8.5s8.5-3.81,8.5-8.5V9H18z" />
             </svg>
-            <span>Fist + Edge to Fly</span>
+            <span>Fist to Pan</span>
         </div>
         <div class="hud-card" id="card-zoom">
             <svg class="hud-icon" viewBox="0 0 24 24">
                 <path
-                    d="M21.71,20.29l-5.01-5.01C17.54,14.03,18,12.57,18,11c-0.01-3.87-3.14-7-7-7c-3.86,0-7,3.13-7,7c0,3.86,3.13,7,7,7 c1.57,0,3.03-0.46,4.28-1.3l5.01,5.01L21.71,20.29z M11,16c-2.76,0-5-2.24-5-5s2.24-5,5-5s5,2.24,5,5S13.76,16,11,16z" />
-                <path d="M13,10h-2v2h-2v-2H7V8h2V6h2v2h2V10z" />
+                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.31-8.86c-1.77-.45-2.34-.94-2.34-1.67 0-.84.79-1.43 2.1-1.43 1.38 0 1.9.66 1.94 1.64h1.71c-.05-1.34-.87-2.57-2.49-2.97V5H10.9v1.69c-1.51.32-2.72 1.3-2.72 2.81 0 1.79 1.49 2.69 3.66 3.21 1.95.46 2.34 1.15 2.34 1.87 0 .53-.39 1.39-2.1 1.39-1.6 0-2.23-.72-2.32-1.64H8.04c.1 1.7 1.36 2.66 2.86 2.97V19h2.34v-1.67c1.52-.29 2.72-1.16 2.73-2.77-.01-2.2-1.9-2.96-3.66-3.42z" />
             </svg>
-            <span>Hold Open to Zoom</span>
+            <span>Palm=In / Back=Out</span>
         </div>
     </div>
 
@@ -231,7 +230,6 @@
         // State Tracking
         let smoothX = 0.5;
         let smoothY = 0.5;
-        let smoothPinchDist = 0;
         let panStartRaw = null; // Start position for 1:1 drag
 
         // DOM Elements
@@ -340,11 +338,12 @@
 
             if (results.multiHandLandmarks && results.multiHandLandmarks.length > 0) {
                 const landmarks = results.multiHandLandmarks[0];
+                const handedness = results.multiHandedness[0]; // { index: 0, score: 0.9, label: 'Left'/'Right' }
 
                 drawConnectors(canvasCtx, landmarks, HAND_CONNECTIONS, { color: '#00ff88', lineWidth: 2 });
                 drawLandmarks(canvasCtx, landmarks, { color: '#ffffff', lineWidth: 1, radius: 2 });
 
-                processGestures(landmarks);
+                processGestures(landmarks, handedness);
 
                 statusText.innerText = "Tracking Active";
                 statusDot.className = "status-dot active";
@@ -366,18 +365,12 @@
             cardZoom.classList.remove('active');
         }
 
-        function processGestures(landmarks) {
+        function processGestures(landmarks, handedness) {
             const pointer = landmarks[5]; // Index knuckle
 
             // 1. Input Smoothing
             smoothX += (pointer.x - smoothX) * SMOOTHING_FACTOR;
             smoothY += (pointer.y - smoothY) * SMOOTHING_FACTOR;
-
-            // 2. Measure Distances
-            const rawPinchDist = calculateDistance(landmarks[4], landmarks[8]);
-
-            if (smoothPinchDist === 0) smoothPinchDist = rawPinchDist;
-            smoothPinchDist += (rawPinchDist - smoothPinchDist) * 0.15;
 
             // Fist Detection
             const middleTipDist = calculateDistance(landmarks[12], landmarks[0]);
@@ -438,7 +431,7 @@
                 }
 
             } else {
-                // *** ZOOM MODE (Rate Control) ***
+                // *** ZOOM MODE (Palm vs Back) ***
                 isPanning = false; // Release pan (inertia happens in loop)
                 autoPanX = 0;
                 autoPanY = 0;
